install starship with cargo-binstall
There was a problem with the package from COPR for ARM.

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -17,6 +17,7 @@ packages=(
     cargo-generate
     cargo-nextest
     # cargo-outdated (no binaries for ARM)
+    starship
     atuin
     unlicense
     jj-cli
