--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -85,6 +85,7 @@ play  = ["bgi", "jj-play"]
 log = "present(@) | ancestors(trunk()..mine(), 2) | trunk()"
 
 [signing]
+behavior = "drop"
 backend = "ssh"
 key = "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIM2geN1p04/RFi6LPt8hoCvTfEKhR1RH6iuH9N9wKpD7"
 backends.ssh.program = "/opt/1Password/op-ssh-sign"
