git: configure send-email

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -61,6 +61,12 @@
 [rerere]
 	enabled = true
 	autoupdate = true
+[sendemail]
+	from = Remo Senekowitsch <remo@buenzli.dev>
+	smtpServer = smtp.mailbox.org
+	smtpUser = mhazyhlu@mailbox.org
+	smtpencryption = ssl
+	smtpserverport = 465
 [submodule]
 	recurse = true
 [tag]
