jj: adjust push aliases

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -41,8 +41,9 @@ e  = ["edit"]
 f  = ["git", "fetch", "--all-remotes"]
 l  = ["log", "--template", "custom_log_oneline", "--revisions", "ancestors(@)"]
 g  = ["log", "--template", "custom_log_oneline", "--revisions", "all()"]
-p  = ["git", "push"]
-pa = ["git", "push", "--revisions", "all() ~ private()"]
+p  = ["git", "push", "--revisions", "all() ~ private()"]
+pc = ["git", "push", "--change"]
+pd = ["git", "push", "--deleted"]
 r  = ["rebase"]
 s  = ["show"]
 
