alacritty: switch to adwaita mono font
Also revert some jj node styles to the default. The defaults look way
better with Adwaita Mono than Roboto Mono.

--- a/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
@@ -75,4 +75,4 @@ dconf write "/org/gnome/Ptyxis/Profiles/$ptyxis_profile/palette" "'Vs Code'"
 dconf write /org/gnome/Ptyxis/audible-bell false
 dconf write /org/gnome/Ptyxis/visual-bell false
 dconf write /org/gnome/Ptyxis/use-system-font false
-dconf write /org/gnome/Ptyxis/font-name "'Roboto Mono 11'"
+dconf write /org/gnome/Ptyxis/font-name "'Adwaita Mono 11'"
