ssh: add alias for codeberg

--- a/private_dot_ssh/private_config.tmpl
+++ b/private_dot_ssh/private_config.tmpl
@@ -8,6 +8,10 @@ Host github
   User git
   HostName github.com
 
+Host codeberg
+  User git
+  HostName codeberg.org
+
 Host zhaw
   User git
   HostName github.zhaw.ch
