jj: enable write-change-id-header

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -9,6 +9,7 @@ email = "remo@buenzli.dev" # default, overruled by domain-specific setting
 push-bookmark-prefix = "senekor/" # default, overruled by domain-specific setting
 push-new-bookmarks = true
 private-commits = "private()"
+write-change-id-header = true
 # {{- if not .isServer }}
 sign-on-push = true
 # {{- end }}
