jj: add "rebase destination" alias

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -46,6 +46,7 @@ pc = ["git", "push", "--change"]
 pb = ["git", "push", "--bookmark"]
 pd = ["git", "push", "--deleted"]
 r  = ["rebase"]
+rd = ["rebase", "--destination"]
 s  = ["show"]
 
 tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
