remove usage of `sudo sd`
sd isn't in the official fedora repos anymore. I can install it with
cargo, but then it won't be available to the root user.

--- a/.chezmoiscripts/3_configure/run_onchange_after_root_hx.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_root_hx.sh.tmpl
@@ -7,4 +7,4 @@ set -eo pipefail
 
 sudo mkdir -p "/root/.config/helix"
 sudo cp "$HOME/.config/helix/config.toml" "/root/.config/helix/config.toml"
-sudo sd '^theme.*$' 'theme = "zenburn"' "/root/.config/helix/config.toml"
+sudo sed --in-place 's/^theme.*$/theme = "zenburn"/g' "/root/.config/helix/config.toml"
