fix installation of gh-markdown-preview
During initial setup, the GH_TOKEN variable hasn't been loaded by a fish
instance yet, so spawn one explicitly.

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -62,7 +62,8 @@ fi
 
 if ! test -d "$HOME/.local/share/gh/extensions/gh-markdown-preview" ; then
     echo "Downloading and gh-markdown-preview..."
-    gh extension install yusukebe/gh-markdown-preview
+    # launch fish to make sure GH_TOKEN is loaded on fresh setup
+    fish -c "gh extension install yusukebe/gh-markdown-preview"
 fi
 
 # hyprland plugins
