jj: add alias to pushed new named bookmarks

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -44,6 +44,7 @@ pa = ["git", "push", "--all"]
 pt = ["git", "push", "--tracked"]
 pc = ["git", "push", "--change"]
 pb = ["git", "push", "--bookmark"]
+pn = ["git", "push", "--named"]
 pd = ["git", "push", "--deleted"]
 r  = ["rebase"]
 rd = ["rebase", "--destination"]
