--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -26,8 +26,8 @@ packages=(
     # niri
     niri
     mate-polkit # authentication agent
-    fuzzel # installed by default for niri
-    wlsunset # disabled in current config
+    fuzzel
+    wlsunset
     blueman # bluetooth GUI
     pavucontrol # audio GUI
     brightnessctl # laptop screen brightness
