--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -6,7 +6,7 @@ name = "Remo Senekowitsch"
 email = "remo@buenzli.dev" # default, overruled by domain-specific setting
 
 [git]
-push-bookmark-prefix = "senekor/" # default, overruled by domain-specific setting
+push-bookmark-prefix = "senekor-" # default, overruled by domain-specific setting
 push-new-bookmarks = true
 private-commits = "private()"
 write-change-id-header = true
@@ -17,11 +17,11 @@ sign-on-push = true
 # domain-specific overrides, make sure to update git config as well!
 [[--scope]]
 --when.repositories = ["~/repos/buenzli"]
-git.push-bookmark-prefix = "remo/"
+git.push-bookmark-prefix = "remo-"
 [[--scope]]
 --when.repositories = ["~/repos/zhaw"]
 user.email = "senk@zhaw.ch"
-git.push-bookmark-prefix = "senk/"
+git.push-bookmark-prefix = "senk-"
 
 [ui]
 default-command = ["log", "--template", "custom_log_oneline"]
@@ -54,7 +54,7 @@ tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
 init = ["git", "init", "--colocate"]
 yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
 yolont = ["config", "unset", "--repo", "revset-aliases.'immutable_heads()'"]
-track-mine = ["bookmark", "track", "regex:(remo|senekor|senk)/.*@.*"]
+track-mine = ["bookmark", "track", "regex:(remo|senekor|senk)[/-].*@.*"]
 track-all = ["bookmark", "track", "glob:*@*"] # for personal repos where I don't use the prefix
 
 # [scripts]
