waybar: install and initial config

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -27,6 +27,7 @@ packages=(
     niri
     mate-polkit # authentication agent
     fuzzel
+    waybar
     wlsunset
     blueman # bluetooth GUI
     pavucontrol # audio GUI
