--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -32,7 +32,8 @@ button {
 #wireplumber,
 #tray,
 #idle_inhibitor,
-#power-profiles-daemon {
+#power-profiles-daemon,
+#custom-power {
     padding: 0 10px;
     color: #ffffff;
 }
@@ -169,4 +170,8 @@ label:focus {
 
 #privacy-item.audio-out {
     background-color: #0069d4;
+}
+
+#custom-power {
+    min-width: 16px;
 }
