update installation of openscad-lsp

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -40,7 +40,7 @@ packages=(
     # cargo-outdated (no binaries for ARM)
     typst-cli
     kdlfmt
-    openscad-lsp
+    openscad-lsp topiary-cli
 
     # I maed dis
     unlicense
