install pyrefly python typechecker

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -56,3 +56,5 @@ fi
 
 # for niri
 cargo install xwayland-satellite --locked --git https://github.com/Supreeeme/xwayland-satellite
+
+uv tool install pyrefly
