rustrover: switch to native wayland
This can be removed if a future update switches to native wayland by
default.

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -49,6 +49,7 @@ if ! test -d "/opt/RustRover-$rr_version" ; then
     echo "Downloading and extracting RustRover..."
     curl -L "https://download.jetbrains.com/rustrover/RustRover-$rr_version.tar.gz" \
         | sudo tar xz --directory /opt
+    echo "-Dawt.toolkit.name=WLToolkit" | sudo tee --append /opt/RustRover-$rr_version/bin/rustrover64.vmoptions > /dev/null
 fi
 
 if ! test -d "$HOME/.local/share/gh/extensions/gh-markdown-preview" ; then
