clone blog on personal machines

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -29,6 +29,7 @@ repos=(
     buenzli:remo/async-rust-yoink
     buenzli:remo/data-structure-exercises
     buenzli:remo/keyboard-layouts
+    buenzli:remo/blog
     github:senekor/buenzlimarks
 # {{- end }}
 
