--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -22,6 +22,7 @@ repos=(
     github:helix-editor/helix
 
     zhaw:senk/vt-embedded-linux-driver-rust
+    zhaw:senk/mt
 
 # {{- if eq .org "none" }}
     buenzli:remo/aoc
