--- a/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
@@ -11,6 +11,7 @@ packages=(
     md.obsidian.Obsidian
     org.chromium.Chromium
     org.signal.Signal
+    com.prusa3d.PrusaSlicer
 )
 
 flatpak install --noninteractive flathub "${packages[@]}"
