jj: show signatures
My usual compact templates don't show them either way. Showing them by
default with verbose templates is nice.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -26,7 +26,7 @@ git.push-bookmark-prefix = "senk-"
 default-command = ["log", "--template", "custom_log_oneline"]
 diff-editor = ":builtin" # suppress hint about this config option
 conflict-marker-style = "snapshot"
-# show-cryptographic-signatures = true
+show-cryptographic-signatures = true
 
 [aliases]
 b  = ["bookmark"]
