--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -24,7 +24,7 @@ git.push-bookmark-prefix = "senk-"
 default-command = ["log", "--template", "custom_log_oneline"]
 diff-editor = ":builtin" # suppress hint about this config option
 conflict-marker-style = "snapshot"
-show-cryptographic-signatures = true
+# show-cryptographic-signatures = true # sometimes very slow for unknown signatures
 
 [aliases]
 b  = ["bookmark"]
