--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -115,7 +115,11 @@ layout {
     gaps 0
 
     // You can change the default width of the new windows.
+    {{ if .isLaptop -}}
+    default-column-width { proportion 1.0; }
+    {{ else -}}
     default-column-width { proportion 0.5; }
+    {{ end -}}
     // If you leave the brackets empty, the windows themselves will decide their initial width.
     // default-column-width {}
 
