extract separate script for binary GUIs and bloat

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -25,35 +25,6 @@ packages=(
 )
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
+# Not really needed, because I have many scripts in this location synced via
+# chezmoi anyway. Doesn't hurt though.
 [ -d "$HOME/.local/bin" ] || mkdir --parents "$HOME/.local/bin"
-
-if ! which taplo &> /dev/null ; then
-    curl -fsSL "https://github.com/tamasfe/taplo/releases/latest/download/taplo-full-linux-$(arch).gz" \
-        | gzip --decompress - \
-        | install --mode 755 /dev/stdin ~/.local/bin/taplo
-fi
-
-# {{ template "skipOnServer" . }}
-
-packages=(
-    cargo-generate
-    cargo-nextest
-    # cargo-outdated (no binaries for ARM)
-    typst-cli
-    kdlfmt
-    openscad-lsp topiary-cli
-
-    # I maed dis
-    unlicense
-)
-cargo binstall --no-confirm --log-level warn "${packages[@]}"
-
-if ! which deno &> /dev/null ; then
-    export DENO_INSTALL=~/.local
-    sh <(curl -fsSL https://deno.land/install.sh) --yes --no-modify-path
-fi
-
-# for niri
-cargo install xwayland-satellite --locked --git https://github.com/Supreeeme/xwayland-satellite
-
-uv tool install pyrefly
