jj: change push prefix to use / instead of -
I thought that GitHub doesn't handle the / well in some cases, but
recent testing shows that it deals with it just fine. The slash seems
to be the more common way to indicate scope, ownership etc.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -92,14 +92,14 @@ backends.ssh.allowed-signers = "~/.config/allowed_signers"
 
 [templates]
 op_log = 'builtin_op_log_comfortable'
-git_push_bookmark = '"senekor-" ++ change_id.short()' # default, overruled by domain-specific setting
+git_push_bookmark = '"senekor/" ++ change_id.short()' # default, overruled by domain-specific setting
 
 [[--scope]]
 --when.repositories = ["~/repos/buenzli"]
-templates.git_push_bookmark = '"remo-" ++ change_id.short()'
+templates.git_push_bookmark = '"remo/" ++ change_id.short()'
 [[--scope]]
 --when.repositories = ["~/repos/zhaw"]
-templates.git_push_bookmark = '"senk-" ++ change_id.short()'
+templates.git_push_bookmark = '"senk/" ++ change_id.short()'
 
 [revset-aliases]
 'private()' = "description(glob:'PRIV*')"
