mise: add shell completions

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -28,6 +28,7 @@ packages=(
     sd
     eza
     xh
+    usage-cli # used by mise
 )
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
