--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -92,8 +92,10 @@ backends.ssh.allowed-signers = "~/.config/allowed_signers"
 
 [templates]
 op_log = 'builtin_op_log_comfortable'
-git_push_bookmark = '"senekor/" ++ change_id.short()' # default, overruled by domain-specific setting
 
+[[--scope]]
+--when.repositories = ["~/repos/github"]
+git_push_bookmark = '"senekor/" ++ change_id.short()'
 [[--scope]]
 --when.repositories = ["~/repos/buenzli"]
 templates.git_push_bookmark = '"remo/" ++ change_id.short()'
