--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -8,7 +8,7 @@ echo "Making sure prebuilt binaries are installed..."
 if ! which mise &> /dev/null ; then
     curl https://mise.run | sh
 else
-    mise self-update || true
+    mise self-update -y || true
 fi
 
 if ! which cargo-binstall &> /dev/null ; then
