jj: make config more default for tutorial
While writing the "Jujutsu for everyone" tutorial, it's important for my
config to be relatively close to the default one, so my own experince
doesn't deviate too strongly from the one tutorial readers will have.

* git.push-new-bookmarks = true

  This is a band-aid for bad UI design in Jujutsu. The `--allow-new`
  flag makes no sense. I'm removing this for good, to remind myself that
  I should help out improving this upstream.

  see: https://github.com/jj-vcs/jj/pull/4871

* ui.conflict-marker-style = "snapshot"

  I wasn't using that a ton, so it's no big difference. Removing it adds
  some pressure to use better merge tools. Often, the snapshot style is
  also just not very good with tons of repetition.

* templates.op_log = 'builtin_op_log_comfortable'

  I don't use the op log enough to justify configuring its style.

* template-aliases.'format_short_change_id(id)' = 'id.shortest(6)'

  This is the only one I want to put back when I'm done with the
  tutorial every character counts in the log.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -6,7 +6,6 @@ name = "Remo Senekowitsch"
 email = "remo@buenzli.dev" # default, overruled by domain-specific setting
 
 [git]
-push-new-bookmarks = true
 private-commits = "private()"
 sign-on-push = true
 
@@ -18,7 +17,6 @@ user.email = "senk@zhaw.ch"
 [ui]
 default-command = ["log", "--template", "custom_log_oneline"]
 diff-editor = ":builtin" # suppress hint about this config option
-conflict-marker-style = "snapshot"
 # show-cryptographic-signatures = true # sometimes very slow for unknown signatures
 
 [aliases]
@@ -91,7 +89,6 @@ backends.ssh.program = "/opt/1Password/op-ssh-sign"
 backends.ssh.allowed-signers = "~/.config/allowed_signers"
 
 [templates]
-op_log = 'builtin_op_log_comfortable'
 
 [[--scope]]
 --when.repositories = ["~/repos/github", "~/repos/codeberg"]
@@ -110,7 +107,8 @@ templates.git_push_bookmark = '"senk/" ++ change_id.short()'
 # https://github.com/martinvonz/jj/blob/main/cli/src/config/templates.toml
 [template-aliases]
 
-'format_short_change_id(id)' = 'id.shortest(6)'
+# TODO: uncomment when I'm done with "Jujutsu for everyone"
+# 'format_short_change_id(id)' = 'id.shortest(6)'
 
 custom_log_oneline = '''
 if(root,
