ssh: update pi alias

--- a/private_dot_ssh/private_config.tmpl
+++ b/private_dot_ssh/private_config.tmpl
@@ -22,7 +22,7 @@ Host buenzli
 
 Host pi
   User remo
-  HostName yd6kjn4il1zruspp.myfritz.net
+  HostName buenzli.ipv64.de
   ForwardAgent yes
 
 # chezmoi:template:left-delimiter="# {{"
