install codebook-lsp spellchecker

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -29,6 +29,7 @@ packages=(
     eza
     xh
     usage-cli # used by mise
+    codebook-lsp
 )
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
