jj: fix push bookmark prefix for repos on github

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -95,7 +95,7 @@ op_log = 'builtin_op_log_comfortable'
 
 [[--scope]]
 --when.repositories = ["~/repos/github"]
-git_push_bookmark = '"senekor/" ++ change_id.short()'
+templates.git_push_bookmark = '"senekor/" ++ change_id.short()'
 [[--scope]]
 --when.repositories = ["~/repos/buenzli"]
 templates.git_push_bookmark = '"remo/" ++ change_id.short()'
