--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -86,6 +86,7 @@ input {
 output "GIGA-BYTE TECHNOLOGY CO., LTD. AORUS FO32U2P 24090B001780" {
     mode "3840x2160@120.000"
     scale 1.5
+    position x=1504 y=-250
 }
 
 // ines-desktop
@@ -105,6 +106,7 @@ output "Philips Consumer Electronics Company PHL 276E8V 0x00000CC2" {
 // framework-13
 output "BOE 0x095F Unknown" {
     transform "normal" // rotatable
+    position x=0 y=0
 }
 
 // Settings that influence how windows are positioned and sized.
