--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -33,6 +33,7 @@ button {
 #tray,
 #idle_inhibitor,
 #power-profiles-daemon,
+#custom-dark-theme,
 #custom-wlsunset,
 #custom-power {
     padding: 0 10px;
