fix installation of vscodium extensions
path changed when switching from rpm to flatpak

--- a/.chezmoiscripts/3_configure/run_onchange_after_codium.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_codium.sh.tmpl
@@ -25,7 +25,7 @@ extensions=(
     kokakiwi.vscode-just
 )
 
-mkdir -p ~/.vscode-oss/extensions
+mkdir -p ~/.var/app/com.vscodium.codium/data/codium/extensions
 
 installed=$(ls ~/.var/app/com.vscodium.codium/data/codium/extensions/)
 for extension in "${extensions[@]}"; do
