update git repos to clone

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -14,6 +14,8 @@ repos=(
 
     github:senekor/rust-workshop
     github:senekor/three-d-models
+    github:senekor/flirt
+    github:jj-for-everyone/jj-for-everyone.github.io
 
     github:rust-lang/www.rust-lang.org
     github:exercism/rust
@@ -21,7 +23,6 @@ repos=(
     github:jj-vcs/jj
     github:helix-editor/helix
 
-    zhaw:senk/vt-embedded-linux-driver-rust
     zhaw:senk/mt
 
 # {{- if eq .org "none" }}
@@ -31,10 +32,12 @@ repos=(
     buenzli:remo/data-structure-exercises
     buenzli:remo/keyboard-layouts
     buenzli:remo/blog
+    buenzli:remo/cs-exams
     github:senekor/buenzlimarks
 # {{- end }}
 
 # {{- if eq .org "zhaw" }}
+    zhaw:hpmm/weekly
     zhaw:hpmm/mc2-labs
     zhaw:InES/werkzeugraum
 # {{- end }}
