--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -38,6 +38,7 @@ repos=(
 
 # {{- if eq .org "zhaw" }}
     zhaw:hpmm/weekly
+    zhaw:hpmm/pass
     zhaw:hpmm/mc2-labs
     zhaw:InES/werkzeugraum
 # {{- end }}
