add hpmm-nas ssh alias

--- a/private_dot_ssh/private_config.tmpl
+++ b/private_dot_ssh/private_config.tmpl
@@ -40,6 +40,10 @@ Host senk-desktop
   HostName senk-desktop.zhaw.ch
   ForwardAgent yes
 
+Host hpmm-nas
+  User ueli
+  HostName srv-fs-t-101.zhaw.ch
+
 Host gh-actions-runner
   User senk
   HostName srv-lab-t-581.zhaw.ch
